--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,13 @@
 .idea/scopes/scope_settings.xml
 
 .idea/workspace.xml
+
+.idea/encodings.xml
+
+.idea/misc.xml
+
+.idea/vcs.xml
+
+.idea/modules.xml
+
+.idea/wix.iml
